--- a/round1.html
+++ b/round1.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container mt-5">
         <h1 class="text-center">Round 1</h1>
-        <button><a href="/r1q1.html">Question 1</a></button>
+        <button><a href="https://staffing07.github.io/chloeschool/r1q1.html">Question 1</a></button>
 
 
     </div>
